<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/expenses" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/reports" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>