<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.expensemanagement.agent.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.expensemanagement.agent.ui.expense.ExpenseListFragment"
        android:label="@string/expenses"
        tools:layout="@layout/fragment_expense_list" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.expensemanagement.agent.ui.category.CategoryFragment"
        android:label="@string/categories" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.expensemanagement.agent.ui.reports.ReportsFragment"
        android:label="@string/reports" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.expensemanagement.agent.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>